2004-07-08  Christian Kellner <gicmo@gnome-de.org>

	* libgnomevfs/gnome-vfs-dns-sd.h: Fixed small typos.

2004-07-07  Christian Kellner <gicmo@gnome-de.org>
	* libgnomevfs/gnome-vfs-socket-buffer.[ch]:
	added the gnome_vfs_socket_buffer_read_until function and fixed some
	minor gtk-doc comment typos.

2004-07-07  Alexander Larsson  <alexl@redhat.com>

	* modules/http-method.c (connect_to_uri): 
	* modules/default-modules.conf:
	Introduce davs for ssl dav.

2004-07-06  Christian Kellner <gicmo@gnome-de.org>
	* libgnomevfs/gnome-vfs-inet-connection.[ch]: 
	* libgnomevfs/gnome-vfs-socket.[ch]:
	* libgnomevfs/gnome-vfs-ssl.[ch]: fixed some gtk-doc comments and
	added gnome_vfs_inet_connection_set_timeout fuctions
	* libgnomevfs/gnome-vfs-result.[ch]: added a GNOME_VFS_ERROR_TIMEOUT
	result

2004-07-06  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c:
	Make move/copy merge directories instead of overwriting them.
	
	* modules/file-method.c: (get_stat_info):
	Fix up symlink handling

2004-07-05  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release bump

==== gnome-vfs 2.7.3 ====
	
2004-07-05  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for 2.7.3
	
	* imported/neon/Makefile.am:
	Build using automake

2004-07-03  Christophe Fergeau  <teuf@gnome.org>

        * libgnomevfs/gnome-vfs-utils.c: use dngettext instead of ngettext
          since gnome-vfs is a library, fixes bug #145344

2004-07-03  Takao Fujiwara  <takao.fujiwara@sun.com>
 
 	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c: add a 'DVD' to the 
 	  list of known translatable drive names
 	* daemon/gnome-vfs-daemon.c: initialize gettext so that strings from
 	  the daemon are translated

2004-06-26  Marco Pesenti Gritti  <marco@gnome.org>

	* schemas/desktop_gnome_url_handlers.schemas.in:

	Set gaim as default handler for aim protocol.

2004-07-02  Alexander Larsson  <alexl@redhat.com>

	Patch from Christian Kellner to import the latest neon library
	